Fix menu title wrap problem.

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -127,7 +127,6 @@
     transform: translate(-50%, -50%);
     z-index: 100;
     color: white;
-    white-space: pre;
     background: #006738;
     width: 100%;
     text-align: center;
